@@ -1,3 +1,4 @@
+2022-07-07: [BUGFIX] Fix UPowerWidget not showing text on click when fontsize is None
 2022-07-03: [PACKAGING] Use git versioning details
 2022-07-03: [BUGFIX] Fix scaling on CurrentLayoutIcon and disable `use_mask=True` default
 2022-07-02: [PACKAGING] Fix missing files in package
